implemented member menagement for associazioneController, added role checking and updated test
